# camelotte

./: .gitignore  LICENSE.md  README.md  dune-project  flake.nix  monadise-lwt.opam  monadise.opam  next.opam  ppx_deriving_madcast.opam  ppx_monad.opam  valet.opam
.github/workflows/: ci.yaml
monadise/: flake-part.nix
monadise/test/: dune
next/: README.md  flake-part.nix
next/lib/: dune  nextGRead.ml  nextGRead.mli  nextGWrite.ml  nextGWrite.mli  nextList.ml  nextString.ml
ppx_deriving_madcast/: .gitignore  flake-part.nix
ppx_deriving_madcast/src/: dune  extList.ml  madcast.ml  parsetree_utils.ml  rule.ml  ruleSet.ml
ppx_deriving_madcast/test/: dune
ppx_deriving_madcast/test/positive/: list_option_unpacking.ml
ppx_monad/: README.org  flake-part.nix
ppx_monad/src/: dune
ppx_monad/src/lib/: dune  helpers.ml  ppx_monad_lib.ml  ppx_monad_lib.mli
ppx_monad/src/lib/expander/: assertExpander.ml  common.ml  expander.ml  forExpander.ml  ifthenelseExpander.ml  letExpander.ml  matchExpander.ml  sequenceExpander.ml  tryExpander.ml  whileExpander.ml
ppx_monad/src/ppx/: dune
ppx_monad/src/ppx/do/: dune  ppx_monad_ppx_do.ml
ppx_monad/src/ppx/either/: dune  ppx_monad_ppx_either.ml
ppx_monad/src/ppx/list/: dune  ppx_monad_ppx_list.ml
ppx_monad/src/ppx/monad/: dune  ppx_monad_ppx_monad.ml
ppx_monad/src/ppx/option/: dune  ppx_monad_ppx_option.ml
ppx_monad/src/ppx/result/: dune  ppx_monad_ppx_result.ml
ppx_monad/src/ppx/seq/: dune  ppx_monad_ppx_seq.ml
ppx_monad/test/nop/: write-dune.sh
ppx_monad/test/nop/cases/: assert.ml  dune  for.ml  for_nested.ml  let.ml  match_exn_uncaught.ml  match_nasty_exn_uncaught.ml  match_nasty_exn_uncaught_2.ml  seq.ml  try.ml
ppx_monad/test/nop/ppx_nop/: dune  ppx_nop_from_scratch.ml  ppx_nop_monad.ml
spacedout/: flake-part.nix
valet/: flake-part.nix
valet/test/: dune
